@startuml
'https://plantuml.com/class-diagram

class FunctionContext

class UserFunctionCall {
    note right: On last defined class
    FunctionCallData data
}

class ContextObject

class ExecutionContext

class ForFunction

class FunctionDefinition {
    annotations
    name
}

interface Node
interface Metaphor

FunctionContext <|-- Node
ContextObject <|-- Node
ExecutionContext <|-- Node
FunctionContext *-- "1" ContextObject : body
FunctionDefinition o-- "1" ContextObject : body
FunctionDefinition <|-- Metaphor
UserFunctionCall o-- "1" FunctionContext : definition

class UserFunctionCall
note right: va1 = userFunctionCall("a1")

class FunctionDefinition
note right: userFunctionCall(a : string) : { ... }

class FunctionContext
note right: created during link

@enduml
